--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <header>
+    <header id="header">
         <nav>
             <a href="#">
                 <img src="./src/img/logo.webp" alt="Gatien Salaun Logo" />
@@ -29,11 +29,8 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-                <button class="hamburger" type="button">
-                    <span class="bars">
-                    </span>
-                </button>
 
+                <i class="fas fa-bars menu"></i>
             </div>
 
         </nav>
@@ -41,51 +38,192 @@
 
     <main>
 
+        <div id="message">
+            <div class="message-container">
+                <i id="close" onclick="hideMessage()" class="fas fa-times"></i>
+                <span>Do you have questions?</span>
+                <p>We are here to help!</p>
+                <a href="tel:+54 9 11 7360-4021">
+                    <p id="phone"><i class="fas fa-phone"></i> +54 9 11 7360-4021</p>
+                </a>
+            </div>
+        </div>
+
         <section id="home">
-            <video src="/src/video/hero-video.mp4" autoplay loop muted></video>
+
+            <div class="background">
+                <video src="/src/video/hero-video.mp4" autoplay loop muted></video>
+            </div>
 
 
             <div class="hero-container">
-                <h1>The Benefits of Working with a Luxury Presence Agent</h1>
+                <h1>Marketing Services</h1>
+                <h2>The Benefits of Working with a Luxury Presence Agent</h2>
 
                 <div class="btns">
                     <button class="secondary-btn">
                         Get in touch
                     </button>
-                    <button class="primary-btn">
-                        Know more
-                    </button>
+                    <a href="#content-1">
+                        <button class="primary-btn">
+                            Know more
+                        </button>
+                    </a>
                 </div>
             </div>
         </section>
 
         <section id="content-1">
-            <div class="container">
-                <div>
-                    <h2>Why you should hire an agent who has partnered with a luxury real estate marketing company</h2>
 
+            <div class="image">
+                <img src="https://images.pexels.com/photos/1732414/pexels-photo-1732414.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="Miami Beach Luxury Real Estate">
+            </div>
+
+            <div class="content-box">
+                <div class="container-content column">
+                    <h2>Why you <span class="text-blue">should hire</span> an agent who has partnered with a luxury real
+                        estate marketing company</h2>
                     <p>One of the biggest perks of working with a real estate agent is their ability to market your
                         property
-                        to
-                        the right target audience. A professional agent with the right experience will be able to
-                        identify
+                        to the right target audience. A professional agent with the right experience will be able to
+                        identify who will be interested in your property and implement effective strategies to reach
+                        them
+                        via their website, paid advertising, social media, and other means. When you work with an agent
                         who
-                        will be interested in your property and implement effective strategies to reach them via their
-                        website,
-                        paid advertising, social media, and other means. When you work with an agent who has partnered
-                        with
-                        Luxury Presence, you benefit from the many different types of marketing capabilities the company
-                        offers.
-                        Here is how:
+                        has partnered with <span class="text-blue">Luxury Presence</span>, you benefit from the many
+                        different types of marketing
+                        capabilities the company offers.
                     </p>
+                    <a href="#features">
+                        <button class="secondary-btn short-btn">
+                            See how
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </section>
 
+        <section id="features">
+
+            <div class="container order-right">
+                <div class="image-container">
+                    <img src="https://images.pexels.com/photos/87223/pexels-photo-87223.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        alt="">
                 </div>
 
+                <div class="text-container">
+
+
+                    <h4>Paid Advertising on All Channels</h4>
+                    <p>To reach your potential buyers, <span class="text-dark">you have to know who they are</span>,
+                        where they spend their time
+                        online, and how they make their buying decisions. Agents who use luxury real estate marketing
+                        services are able to identify your niche market, then create paid ads on Facebook, Google,
+                        Instagram, and YouTube that reach those interested in your property. These paid ad campaigns are
+                        highly customized and targeted, ensuring you are not spending money marketing to those who are
+                        not in the market for a property such as yours.</p>
+                </div>
+            </div>
+
+            <div class="container order-left">
+                <div class="image-container h-max">
+                    <img src="https://images.pexels.com/photos/32870/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        alt="">
+                </div>
+
+                <div class="text-container">
+
+
+                    <h4>Expert Content Production</h4>
+                    <p>Content is one of the most powerful resources a real estate agent has to promote your property.
+                        Being able to create high-quality content such as video and copywriting is an essential tool
+                        that elevates the agents who use luxury real estate marketing services above their competitors.
+                        According to a recent survey, <span class="text-dark">85 percent of buyers and sellers want to
+                            work with an agent who
+                            uses video</span>—and for good reason. An agent who uses video is able to connect with
+                        potential buyers
+                        on a deeper level and build trust and rapport. When they use video to market your property, they
+                        are showing viewers what it would really be like to walk through and live in your home—something
+                        that is much more difficult to do with a written description.
+                    </p>
+                    <p class="secondary-p">However, written descriptions—or copywriting—is also important. Your property
+                        needs to be
+                        described in appealing and vibrant terms on the listing and on any additional marketing that is
+                        created to sell it. Those agents who work with Luxury Presence get access to experienced real
+                        estate copywriters who create blogs, website copy, and content marketing pieces that make your
+                        property attractive to potential buyers.</p>
+                </div>
+            </div>
+
+            <div class="container order-right">
+                <div class="image-container">
+                    <img src="https://images.pexels.com/photos/2343465/pexels-photo-2343465.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        alt="">
+                </div>
+
+                <div class="text-container">
+
+
+                    <h4>Effective Search Engine Optimization</h4>
+                    <p>Recent research has shown that <span class="text-dark">44% of buyers found the home they
+                            purchased</span> on the internet. Many
+                        of them simply googled the search terms that they wanted in a new home and started their search
+                        that way. For your home to show up in these types of searches, your real estate agent needs to
+                        use the right terms in your online marketing. The effective use of these terms is referred to as
+                        search engine optimization or SEO. The process of identifying and correctly using the right
+                        terms is a bit of a science—one that the SEO experts at Luxury Presence have mastered. When a
+                        potential buyer searches terms that match your home, your property will show up in the results
+                        and provide opportunities for the buyer to learn more.</p>
+                </div>
+            </div>
+
+            <div class="container order-left">
+                <div class="image-container h-max">
+                    <img src="https://images.pexels.com/photos/164558/pexels-photo-164558.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        alt="">
+                </div>
+
+                <div class="text-container">
+                    <h4>Social Media Marketing</h4>
+
+                    <p>If your real estate agent is an influencer on social media, he or she has access to thousands of
+                        niche buyers who are ready to invest in property. To be an influencer, an agent either needs to
+                        dedicate a large chunk of their time to social media or they need to partner with luxury real
+                        estate marketing service providers who can put in the work for them. Wouldn’t you rather your
+                        agent spent his or her time marketing your property and let an expert handle their social media
+                        presence? At Luxury Presence, our dedicated success team utilizes an agent’s stories and feed
+                        posts to help them go viral and become an authority in their industry. Once they’ve harnessed
+                        the power of becoming an influencer, they can use their voice to advocate for your home and sell
+                        it more quickly than their competitors.
+                    </p>
+                </div>
             </div>
         </section>
 
     </main>
 
+    <footer>
+        <div class="footer-container">
+
+            <p>Copyright © 2022 | <a href="#">Privacy Policy</a></p>
+
+            <p>
+                Powered by <a href="#">Luxury Presence</a>
+            </p>
+
+            <div class="social-list">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-pinterest"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
+
+<script src="./scripts/main.js"></script>
+<script src="https://kit.fontawesome.com/ceabe9f5f3.js" crossorigin="anonymous"></script>
 
 </html>
