--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/index.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Miami Beach Luxury Real Estate | Gatien Salaun | Realtor</title>
 </head>
 
@@ -106,7 +107,7 @@
 
         <section id="features">
 
-            <div class="container order-right">
+            <div class="container order-right" data-aos="fade-in">
                 <div class="image-container">
                     <img src="https://images.pexels.com/photos/87223/pexels-photo-87223.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                         alt="">
@@ -126,7 +127,7 @@
                 </div>
             </div>
 
-            <div class="container order-left">
+            <div class="container order-left" data-aos="fade-in">
                 <div class="image-container h-max">
                     <img src="https://images.pexels.com/photos/32870/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                         alt="">
@@ -156,7 +157,7 @@
                 </div>
             </div>
 
-            <div class="container order-right">
+            <div class="container order-right" data-aos="fade-in">
                 <div class="image-container">
                     <img src="https://images.pexels.com/photos/2343465/pexels-photo-2343465.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                         alt="">
@@ -225,5 +226,9 @@
 
 <script src="./scripts/main.js"></script>
 <script src="https://kit.fontawesome.com/ceabe9f5f3.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 
 </html>
